Cleaning up editing

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -20,31 +20,32 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/chuang-howe_a.html,
   people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html, people/clayton_sarah.html,
   people/clayton_sophie.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
-  people/collins_arliss.html, people/collins_matthew.html, people/cordero_victor.html,
-  people/corless_john.html, people/corvellec_marianne.html, people/coudrat_thomas.html,
-  people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html,
-  people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html,
-  people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html,
-  people/davey_rob.html, people/davis_m.html, people/davis_neal.html, people/demichelis_raffaella.html,
-  people/derrick_james.html, people/desjardins_james.html, people/devenyi_gabriel.html,
-  people/devlin_catherine.html, people/dickenson_matt.html, people/dickson_r.html,
-  people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
+  people/collins_arliss.html, people/collins_matthew.html, people/colonna_vincenza.html,
+  people/cordero_victor.html, people/corless_john.html, people/corvellec_marianne.html,
+  people/coudrat_thomas.html, people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html,
+  people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html,
+  people/crusoe_michael.html, people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html,
+  people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
+  people/demichelis_raffaella.html, people/derrick_james.html, people/desjardins_james.html,
+  people/devenyi_gabriel.html, people/devlin_catherine.html, people/dickenson_matt.html,
+  people/dickson_r.html, people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
   people/doyle_kimberly.html, people/duchesne_laurent.html, people/duckles_jonah.html,
   people/duffy_meghan.html, people/duncan_susan.html, people/eddelbuettel_dirk.html,
   people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/evans_andy.html,
   people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fei_xu.html,
   people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
-  people/figueira_l.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
+  people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
   people/fontenelle_hugues.html, people/forstner_konrad.html, people/fournier_auriel.html,
   people/fowler_philip.html, people/friedline_chris.html, people/fu_zhuo.html, people/gan_emilia.html,
   people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html, people/garcia_julian.html,
   people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
   people/ghaffari_noushin.html, people/gibling_heather.html, people/gibson_molly.html,
   people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html, people/gorman_gerard.html,
-  people/graham_laura.html, people/gray_jeremy.html, people/gross_jonathan.html, people/guignard_thomas.html,
-  people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html, people/haddock_s.html,
-  people/haine_denis.html, people/hames_sam.html, people/hamm_christopher.html, people/hamrick_jessica.html,
-  people/hansen_m.html, people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
+  people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
+  people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
+  people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
+  people/hamm_christopher.html, people/hamrick_jessica.html, people/hansen_m.html,
+  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
   people/hart_t.html, people/hawke_ian.html, people/held_fabian.html, people/henderson_donna.html,
   people/henry_ian.html, people/herr_joshua.html, people/hertweck_kate.html, people/hetherington_james.html,
   people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
@@ -53,22 +54,23 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/irving_d.html, people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html,
   people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html,
   people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html,
-  people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html, people/khetani_radhika.html,
-  people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html,
-  people/kitzes_j.html, people/koch_christina.html, people/koenig_steven.html, people/koeppel_alexander.html,
-  people/konrad_b.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
-  people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
-  people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html,
-  people/lebauer_david.html, people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html,
-  people/lehtomaki_joona.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
-  people/liberton_denise.html, people/lightman_matthew.html, people/lin_johnny.html,
-  people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html, people/luo_yuxi.html,
-  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
-  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
-  people/mansour_tamer.html, people/martinez_paula.html, people/marwaha_kunal.html,
-  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
-  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
-  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
+  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
+  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
+  people/koch_christina.html, people/koenig_steven.html, people/koeppel_alexander.html,
+  people/konrad_b.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
+  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
+  people/lake_sherry.html, people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html,
+  people/laufersweiler_mark.html, people/lebauer_david.html, people/lee_kate.html,
+  people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html, people/levernier_jacob.html,
+  people/leyder_jean-christophe.html, people/liberton_denise.html, people/lightman_matthew.html,
+  people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
+  people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html,
+  people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
+  people/mansour_tamer.html, people/marini_camille.html, people/martinez_paula.html,
+  people/marwaha_kunal.html, people/marwick_ben.html, people/mashchenko_sergey.html,
+  people/masoud-ansari_sina.html, people/mayer_fernando.html, people/mcclatchy_sue.html,
+  people/mcclung_bill.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
   people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html,
   people/michonneau_francois.html, people/middleton_ryan.html, people/miles_brian.html,
@@ -78,18 +80,19 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/navarro_francisco.html, people/nederbragt_l.html, people/nenadic_aleksandra.html,
   people/neufeld_ryan.html, people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
   people/nunez-iglesias_juan.html, people/ocais_alan.html, people/ogrady_tina.html,
-  people/oleary_aaron.html, people/olson_r.html, people/orendt_anita.html, people/ory_j.html,
-  people/palamartchouk_kirill.html, people/palm_francisco.html, people/paulo_martin.html,
-  people/pawlik_a.html, people/pearson_john.html, people/pell_j.html, people/perez-suarez_david.html,
-  people/perez_f.html, people/perignon_mariela.html, people/perrett_heidi.html, people/perry_adam.html,
-  people/peru_giacomo.html, people/petre_m.html, people/pfenninger_s.html, people/pinska_adrianna.html,
-  people/pipitone_j.html, people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html,
-  people/preeyanon_likit.html, people/pritchard_leighton.html, people/provencher_francoise.html,
-  people/psomopoulos_fotis.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
-  people/ramos-musalem_ana-karina.html, people/rawat_rohit.html, people/razoumov_alex.html,
-  people/rice_timothy.html, people/richie-halford_adam.html, people/riley_janet.html,
-  people/rio_david.html, people/ritchie_scott.html, people/robinson_james.html, people/robinson_natalie.html,
-  people/robinson_rosario.html, people/rohl_andrew.html, people/rokem_a.html, people/ross_noam.html,
+  people/oleary_aaron.html, people/olson_r.html, people/olsson_catherine.html, people/orendt_anita.html,
+  people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
+  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/pell_j.html,
+  people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
+  people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
+  people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html, people/plumbley_m.html,
+  people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
+  people/pritchard_leighton.html, people/provencher_francoise.html, people/psomopoulos_fotis.html,
+  people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html, people/ramos-musalem_ana-karina.html,
+  people/rawat_rohit.html, people/razoumov_alex.html, people/rice_timothy.html, people/richie-halford_adam.html,
+  people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/roberts_leah.html,
+  people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
+  people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/ross_noam.html,
   people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html, people/sampath_ramesh.html,
   people/sane_maneesha.html, people/sarahan_michael.html, people/schilling_martin.html,
   people/schloss_pat.html, people/schmidt_marian.html, people/schossau_j.html, people/schwartz_rachel.html,
@@ -107,17 +110,18 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/stimberg_marcel.html, people/strootman_jonathan.html, people/sumner_mike.html,
   people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html,
   people/taber-thomas_bradley.html, people/tarkowski_leszek.html, people/tarvin_becca.html,
-  people/tatman_rachael.html, people/teal_t.html, people/telenczuk_bartosz.html, people/telenczuk_maria.html,
-  people/teucher_andrew.html, people/thomas_adam.html, people/thomson_samuel.html,
-  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
-  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/turek_daniel.html,
-  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
-  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
-  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
-  people/van-rossum_thea.html, people/vanichkina_darya.html, people/varga_vicky.html,
-  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
-  people/vilbig_kevin.html, people/von-bieberstein_philipp.html, people/vonderlinden_jens.html,
-  people/wake_leanne.html, people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
+  people/tatman_rachael.html, people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html,
+  people/telenczuk_maria.html, people/teucher_andrew.html, people/thoele_florian.html,
+  people/thomas_adam.html, people/thomson_samuel.html, people/till_robert.html, people/timbers_tiffany.html,
+  people/tomlinson_christopher.html, people/tomsett_richard.html, people/tran_lina.html,
+  people/trimble_will.html, people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html,
+  people/ugalde_juan.html, people/ushizima_daniela.html, people/vahtras_olav.html,
+  people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html, people/van-der-helm_edwin.html,
+  people/van-der-walt_anelda.html, people/van-heusden_peter.html, people/van-rossum_thea.html,
+  people/vanichkina_darya.html, people/varga_vicky.html, people/vargas_horacio.html,
+  people/varoquaux_n.html, people/vera_b.html, people/viana_a.html, people/vilbig_kevin.html,
+  people/von-bieberstein_philipp.html, people/vonderlinden_jens.html, people/wake_leanne.html,
+  people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
   people/warren_dan.html, people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html,
   people/weaver_belinda.html, people/weber_lukas.html, people/weinstein_ben.html,
   people/white_e.html, people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
