adding two bios
adding two new entries to website

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -12,6 +12,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
   people/bostroem_a.html, people/boughton_andrew.html, people/boyle_amy.html, people/bray_e.html,
   people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
+  people/brunson_dana.html, 
   people/bryan_j.html, people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html,
   people/camins-esakov_jared.html, people/canino-koning_r.html, people/cannam_c.html,
   people/capes_gerard.html, people/caporaso_greg.html, people/cartwright_reed.html,
@@ -50,7 +51,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/henry_ian.html, people/herr_joshua.html, people/hertweck_kate.html, people/hetherington_james.html,
   people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
   people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/holdgraf_c.html,
-  people/hollister_jeff.html, people/huang_daisie.html, people/huff_k.html, people/imamoglu_fatma.html,
+  people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html, people/imamoglu_fatma.html,
   people/irving_d.html, people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html,
   people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html,
   people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html,
