--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -6,32 +6,31 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/aruliah_d.html, people/avestruz_camille.html, people/bae_sung.html, people/bahlai_christie.html,
   people/banaszkiewicz_piotr.html, people/barmby_pauline.html, people/barneche_diego.html,
   people/barr_ewan.html, people/bast_radovan.html, people/bauer_dana.html, people/bayer_p.html,
-  people/beagrie_robert.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
-  people/belikov_evgenij.html, people/bennett_n.html, people/bergman_casey.html, people/berry_michelle.html,
-  people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
-  people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
-  people/bostroem_a.html, people/boughton_andrew.html, people/boyle_amy.html, people/bray_e.html,
-  people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
-  people/brunson_dana.html, 
-  people/bryan_j.html, people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html,
-  people/camins-esakov_jared.html, people/canino-koning_r.html, people/cannam_c.html,
-  people/capes_gerard.html, people/caporaso_greg.html, people/cartwright_reed.html,
-  people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
-  people/chase_john.html, people/chatzidimitriou_kyriakos.html, people/chen_daniel.html,
-  people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/chuang-howe_a.html,
-  people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html, people/clayton_sarah.html,
-  people/clayton_sophie.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
-  people/collins_arliss.html, people/collins_matthew.html, people/colonna_vincenza.html,
-  people/cordero_victor.html, people/corless_john.html, people/corvellec_marianne.html,
-  people/coudrat_thomas.html, people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html,
-  people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html,
-  people/crusoe_michael.html, people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html,
-  people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
-  people/demichelis_raffaella.html, people/derrick_james.html, people/desjardins_james.html,
-  people/devenyi_gabriel.html, people/devlin_catherine.html, people/dickenson_matt.html,
-  people/dickson_r.html, people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
-  people/doyle_kimberly.html, people/duchesne_laurent.html, people/duckles_jonah.html,
-  people/duffy_meghan.html, people/duncan_susan.html, people/eddelbuettel_dirk.html,
+  people/beagrie_robert.html, people/beitey_david.html, people/bekolay_trevor.html,
+  people/belcaid_mahdi.html, people/belikov_evgenij.html, people/bennett_n.html, people/bergman_casey.html,
+  people/berry_michelle.html, people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html,
+  people/boissonneault_maxime.html, people/bonnie_jessica.html, people/bonsma_madeleine.html,
+  people/boocock_james.html, people/bostroem_a.html, people/boughton_andrew.html,
+  people/boyle_amy.html, people/bray_e.html, people/broman_karl.html, people/brown_amy.html,
+  people/brown_ct.html, people/brown_kyler.html, people/brunson_dana.html, people/bryan_j.html,
+  people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html, people/camins-esakov_jared.html,
+  people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
+  people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html,
+  people/charbonneau_amanda.html, people/chase_john.html, people/chatzidimitriou_kyriakos.html,
+  people/chen_daniel.html, people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html,
+  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kally.html, people/chung_kathy.html,
+  people/clayton_sarah.html, people/clayton_sophie.html, people/code_w.html, people/coelho_luis.html,
+  people/collings_ruth.html, people/collins_arliss.html, people/collins_matthew.html,
+  people/colonna_vincenza.html, people/cordero_victor.html, people/corless_john.html,
+  people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_grace.html,
+  people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html,
+  people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
+  people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html, people/davey_rob.html,
+  people/davis_m.html, people/davis_neal.html, people/demichelis_raffaella.html, people/derrick_james.html,
+  people/desjardins_james.html, people/devenyi_gabriel.html, people/devlin_catherine.html,
+  people/dickenson_matt.html, people/dickson_r.html, people/doehle_phillip.html, people/dolson_emily.html,
+  people/dotson_david.html, people/doyle_kimberly.html, people/duchesne_laurent.html,
+  people/duckles_jonah.html, people/duffy_meghan.html, people/duncan_susan.html, people/eddelbuettel_dirk.html,
   people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/evans_andy.html,
   people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fei_xu.html,
   people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
@@ -51,23 +50,24 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/henry_ian.html, people/herr_joshua.html, people/hertweck_kate.html, people/hetherington_james.html,
   people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
   people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/holdgraf_c.html,
-  people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html, people/imamoglu_fatma.html,
-  people/irving_d.html, people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html,
-  people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html,
-  people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html,
-  people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
-  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
-  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
-  people/koch_christina.html, people/koenig_steven.html, people/koeppel_alexander.html,
-  people/konrad_b.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
-  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
-  people/lake_sherry.html, people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html,
-  people/laufersweiler_mark.html, people/lebauer_david.html, people/lee_kate.html,
-  people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html, people/levernier_jacob.html,
-  people/leyder_jean-christophe.html, people/liberton_denise.html, people/lightman_matthew.html,
-  people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
-  people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html,
-  people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
+  people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html,
+  people/imamoglu_fatma.html, people/irving_d.html, people/ivanov_p.html, people/jackson_m.html,
+  people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
+  people/johnson_ben.html, people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html,
+  people/joyce_blake.html, people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html,
+  people/ketcheson_david.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
+  people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
+  people/klerke_sigrid.html, people/koch_christina.html, people/koenig_steven.html,
+  people/koeppel_alexander.html, people/konrad_b.html, people/kumar_avishek.html,
+  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
+  people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
+  people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html,
+  people/lebauer_david.html, people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html,
+  people/lehtomaki_joona.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
+  people/liberton_denise.html, people/lightman_matthew.html, people/lin_johnny.html,
+  people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html, people/luo_yuxi.html,
+  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
+  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
   people/mansour_tamer.html, people/marini_camille.html, people/martinez_paula.html,
   people/marwaha_kunal.html, people/marwick_ben.html, people/mashchenko_sergey.html,
   people/masoud-ansari_sina.html, people/mayer_fernando.html, people/mcclatchy_sue.html,
