Bio for Daniel Wheeler
Bio for Daniel Wheeler after completing the instructor training
course.

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -132,7 +132,8 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/winston_donald.html, people/winton_jared.html, people/woo_kara.html, people/woods_c.html,
   people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html,
   people/zakkaroff_constantine.html, people/zhang_jingchao.html, people/zhang_qp.html,
-  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
+  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html,
+  people/wheeler_daniel.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/ipfs.html, projects/iplant.html,
