Linking to data privacy policy.
1. Adding link to main menu.
2. Adding link from SCF page.
3. Fixing non-ASCII quote characters in privacy page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,8 @@
     url: "/scf/members/"
   - title: "Our History"
     url: "/scf/history/"
+  - title: "Privacy Policy"
+    url: "/privacy/"
 
 - title: "Workshops"
   url: "/workshops/"
