Add my name to includes.yml

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -39,40 +39,41 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/eyers_david.html, people/falster_daniel.html, people/farsarakis_emmanouil.html,
   people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
   people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
-  people/fontenelle_hugues.html, people/forstner_konrad.html, people/fournier_auriel.html,
-  people/fowler_philip.html, people/friedline_chris.html, people/fu_zhuo.html, people/gan_emilia.html,
-  people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html, people/garcia_julian.html,
-  people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
-  people/ghaffari_noushin.html, people/gibling_heather.html, people/gibson_molly.html,
-  people/goble_c.html, people/gogoglou_antonia.html, people/gonzalez_ivan.html, people/gorman_gerard.html,
-  people/graham_laura.html, people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html,
-  people/guignard_thomas.html, people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html,
-  people/guzman_melissa.html, people/haddock_s.html, people/haine_denis.html, people/hames_sam.html,
-  people/hamm_christopher.html, people/hamrick_jessica.html, people/hansen_m.html,
-  people/harris_rayna.html, people/harrison_anthony.html, people/harstad_emelie.html,
-  people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html, people/held_fabian.html,
-  people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html, people/herr_joshua.html,
-  people/hertweck_kate.html, people/hetherington_james.html, people/hiebert_james.html,
-  people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html, people/hocking_daniel.html,
-  people/hodge_amy.html, people/hodges_toby.html, people/holdgraf_c.html, people/hollister_jeff.html,
-  people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html, people/imamoglu_fatma.html,
-  people/irving_d.html, people/ivanov_p.html, people/jackson_m.html, people/jacobs_christian.html,
-  people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html,
-  people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html,
-  people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html, people/ketcheson_david.html,
-  people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html, people/kintsakis_athanassios.html,
-  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/klerke_sigrid.html,
-  people/koch_christina.html, people/koenig_steven.html, people/koeppel_alexander.html,
-  people/konrad_b.html, people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
-  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
-  people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
-  people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
-  people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
-  people/levernier_jacob.html, people/leyder_jean-christophe.html, people/li_peter.html,
-  people/liberton_denise.html, people/lightman_matthew.html, people/lijnzaad_philip.html,
-  people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
-  people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html,
-  people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
+  people/fontenelle_hugues.html, people/ford_jes.html, people/forstner_konrad.html,
+  people/fournier_auriel.html, people/fowler_philip.html, people/friedline_chris.html,
+  people/fu_zhuo.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
+  people/garcia-gutierrez_leonor.html, people/garcia_julian.html, people/garoutte_aaron.html,
+  people/gates_chris.html, people/gatto_laurent.html, people/ghaffari_noushin.html,
+  people/gibling_heather.html, people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html,
+  people/gonzalez_ivan.html, people/gorman_gerard.html, people/graham_laura.html,
+  people/grande_bruno.html, people/gray_jeremy.html, people/gross_jonathan.html, people/guignard_thomas.html,
+  people/gustavsen_j.html, people/guy_t.html, people/guyer_jonathan.html, people/guzman_melissa.html,
+  people/haddock_s.html, people/haine_denis.html, people/hames_sam.html, people/hamm_christopher.html,
+  people/hamrick_jessica.html, people/hansen_m.html, people/harris_rayna.html, people/harrison_anthony.html,
+  people/harstad_emelie.html, people/hart_t.html, people/hawke_ian.html, people/hayek_wolfgang.html,
+  people/held_fabian.html, people/henderson_donna.html, people/henry_ian.html, people/heroux_martin.html,
+  people/herr_joshua.html, people/hertweck_kate.html, people/hetherington_james.html,
+  people/hiebert_james.html, people/hinchliff_cody.html, people/hinsen_k.html, people/hjelm_johan.html,
+  people/hocking_daniel.html, people/hodge_amy.html, people/hodges_toby.html, people/holdgraf_c.html,
+  people/hollister_jeff.html, people/hoyt_peter.html, people/huang_daisie.html, people/huff_k.html,
+  people/imamoglu_fatma.html, people/irving_d.html, people/ivanov_p.html, people/jackson_m.html,
+  people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
+  people/johnson_ben.html, people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html,
+  people/joyce_blake.html, people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html,
+  people/ketcheson_david.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
+  people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
+  people/klerke_sigrid.html, people/koch_christina.html, people/koenig_steven.html,
+  people/koeppel_alexander.html, people/konrad_b.html, people/kumar_avishek.html,
+  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
+  people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
+  people/laken_benjamin.html, people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html,
+  people/laufersweiler_mark.html, people/lebauer_david.html, people/lee_kate.html,
+  people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html, people/levernier_jacob.html,
+  people/leyder_jean-christophe.html, people/li_peter.html, people/liberton_denise.html,
+  people/lightman_matthew.html, people/lijnzaad_philip.html, people/lin_johnny.html,
+  people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html, people/luo_yuxi.html,
+  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
+  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
   people/mansour_tamer.html, people/marek_diana.html, people/marini_camille.html,
   people/martinez_paula.html, people/marwaha_kunal.html, people/marwick_ben.html,
   people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/mayer_fernando.html,
