--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -1,9 +1,9 @@
 people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.html,
   people/ahmed_arfan.html, people/aiello-lammens_matthew.html, people/ainsley_joshua.html,
-  people/alexander_harriet.html, people/alleen-willems_russell.html, people/allen_james.html,
-  people/alonzi_pete.html, people/alsheikh-hussain_areej.html, people/anderson_c.html,
-  people/anghel_catalina.html, people/antonioletti_mario.html, people/aranda_j.html,
-  people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
+  people/aldazabal_inigo.html, people/alexander_harriet.html, people/alleen-willems_russell.html,
+  people/allen_james.html, people/alonzi_pete.html, people/alsheikh-hussain_areej.html,
+  people/anderson_c.html, people/anghel_catalina.html, people/antonioletti_mario.html,
+  people/aranda_j.html, people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
   people/bae_sung.html, people/bahlai_christie.html, people/banaszkiewicz_piotr.html,
   people/barmby_pauline.html, people/barneche_diego.html, people/barr_ewan.html, people/bast_radovan.html,
   people/batut_berenice.html, people/bauer_dana.html, people/bayer_p.html, people/beagrie_robert.html,
@@ -35,13 +35,14 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/dotson_david.html, people/doyle_kimberly.html, people/droop_alastair.html,
   people/duchesne_laurent.html, people/duckles_jonah.html, people/duffy_meghan.html,
   people/duncan_susan.html, people/earl_stevan.html, people/eddelbuettel_dirk.html,
-  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/evans_andy.html,
-  people/eyers_david.html, people/falster_daniel.html, people/farsarakis_emmanouil.html,
-  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
-  people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
+  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/etxaniz_oier.html,
+  people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html, people/falster_daniel.html,
+  people/farsarakis_emmanouil.html, people/fei_xu.html, people/ferguson_angus.html,
+  people/fernandes_filipe.html, people/fernandez-valverde_selene.html, people/figueira_l.html,
+  people/fishman_dmytro.html, people/fitzjohn_rich.html, people/fonnesbeck_chris.html,
   people/fontenelle_hugues.html, people/ford_jes.html, people/forstner_konrad.html,
   people/fournier_auriel.html, people/fowler_philip.html, people/friedline_chris.html,
-  people/fu_zhuo.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
+  people/fu_zhuo.html, people/fucile_geoffrey.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
   people/garcia-gutierrez_leonor.html, people/garcia_julian.html, people/garoutte_aaron.html,
   people/gates_chris.html, people/gatto_laurent.html, people/ghaffari_noushin.html,
   people/gibling_heather.html, people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html,
@@ -62,18 +63,18 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/joyce_blake.html, people/kajic_ivana.html, people/kelly_tom.html, people/kerr_j.html,
   people/ketcheson_david.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
   people/kintsakis_athanassios.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
-  people/klerke_sigrid.html, people/koch_christina.html, people/koenig_steven.html,
-  people/koeppel_alexander.html, people/konrad_b.html, people/kumar_avishek.html,
-  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
-  people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
-  people/laken_benjamin.html, people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html,
-  people/laufersweiler_mark.html, people/lebauer_david.html, people/lee_kate.html,
-  people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html, people/levernier_jacob.html,
-  people/leyder_jean-christophe.html, people/li_peter.html, people/liberton_denise.html,
-  people/lightman_matthew.html, people/lijnzaad_philip.html, people/lin_johnny.html,
-  people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html, people/luo_yuxi.html,
-  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
-  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
+  people/klerke_sigrid.html, people/knuth_shelley.html, people/koch_christina.html,
+  people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
+  people/kumar_avishek.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html,
+  people/lafleur_olivier.html, people/laforest-lapointe_isabelle.html, people/lagesen_k.html,
+  people/lake_sherry.html, people/laken_benjamin.html, people/lant_jeremiah.html,
+  people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html, people/lebauer_david.html,
+  people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html, people/lehtomaki_joona.html,
+  people/levernier_jacob.html, people/leyder_jean-christophe.html, people/li_peter.html,
+  people/liberton_denise.html, people/lightman_matthew.html, people/lijnzaad_philip.html,
+  people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
+  people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html,
+  people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
   people/mansour_tamer.html, people/marek_diana.html, people/marini_camille.html,
   people/martinez_paula.html, people/marwaha_kunal.html, people/marwick_ben.html,
   people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/mayer_fernando.html,
@@ -85,15 +86,15 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/middleton_ryan.html, people/miles_brian.html, people/milhans_jackie.html,
   people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html, people/mitchell_i.html,
   people/mokhtarzadeh_hamid.html, people/moore_jason.html, people/morris_b.html, people/mudrak_erika.html,
-  people/munoz_ian.html, people/murtaza_ghulam.html, people/nagraj_vp.html, people/nahum_josh.html,
-  people/nakhoul_hani.html, people/navarro_francisco.html, people/nederbragt_l.html,
-  people/neeb_moritz.html, people/nenadic_aleksandra.html, people/neufeld_ryan.html,
-  people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
+  people/mueller_andreas.html, people/munoz_ian.html, people/murtaza_ghulam.html,
+  people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html, people/navarro_francisco.html,
+  people/nederbragt_l.html, people/neeb_moritz.html, people/nenadic_aleksandra.html,
+  people/neufeld_ryan.html, people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
   people/nunez-iglesias_juan.html, people/ocais_alan.html, people/odell_allison-jai.html,
   people/ogrady_tina.html, people/oleary_aaron.html, people/olson_r.html, people/olsson_catherine.html,
   people/orendt_anita.html, people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
-  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/pell_j.html,
-  people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
+  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
+  people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
   people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
   people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html, people/pitchers_w.html,
   people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
@@ -108,38 +109,40 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/sane_maneesha.html, people/sarahan_michael.html, people/schilling_martin.html,
   people/schloss_pat.html, people/schmeier_sebastian.html, people/schmidt_marian.html,
   people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
-  people/serra_neem.html, people/shambaugh_brent.html, people/sharan_malvika.html,
-  people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
-  people/sherman_jason.html, people/shih_yu-ching.html, people/silva_raniere.html,
-  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
+  people/senyondo_henry.html, people/serra_neem.html, people/shambaugh_brent.html,
+  people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
+  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
+  people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
+  people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
   people/sloggett_clare.html, people/small_luc.html, people/smith_byron.html, people/smith_daniel.html,
   people/smith_j.html, people/smorul_mike.html, people/soares-siqueira_abel.html,
   people/soderberg_courtney.html, people/soontiens_nancy.html, people/speer_donald.html,
   people/srinath_ashwin.html, people/srinivasan_karthik.html, people/st-onge_pier-luc.html,
   people/stachelek_joseph.html, people/stacy_mark.html, people/standage_daniel.html,
-  people/stanton-cook_mitchell.html, people/staton_margaret.html, people/steinbach_peter.html,
-  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
-  people/strootman_jonathan.html, people/sumner_mike.html, people/sundaram_arvind.html,
-  people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
-  people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
-  people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html, people/telenczuk_maria.html,
-  people/terman_rochelle.html, people/teucher_andrew.html, people/thoele_florian.html,
-  people/thomas_adam.html, people/thomson_samuel.html, people/till_robert.html, people/timbers_tiffany.html,
-  people/tomlinson_christopher.html, people/tomsett_richard.html, people/tran_lina.html,
-  people/trimble_will.html, people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html,
-  people/ugalde_juan.html, people/ushizima_daniela.html, people/vahtras_olav.html,
-  people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html, people/van-der-helm_edwin.html,
-  people/van-der-walt_anelda.html, people/van-heusden_peter.html, people/van-rossum_thea.html,
-  people/van-schyndel_jay.html, people/vandervalk_steven.html, people/vanichkina_darya.html,
-  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
-  people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
-  people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
-  people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html, people/wasser_leah.html,
-  people/waterfall_josh.html, people/waugh_b.html, people/weaver_belinda.html, people/weber_lukas.html,
-  people/weinstein_ben.html, people/wheeler_daniel.html, people/white_e.html, people/white_easton.html,
-  people/whitefield_shawn.html, people/whitehead_tyson.html, people/whitlock_alexander.html,
-  people/wijeratne_asela.html, people/wilber_mark.html, people/wilkerson_chandler.html,
-  people/williams_jason.html, people/williams_l.html, people/williams_ryan.html, people/williford_anna.html,
+  people/staneva_valentina.html, people/stanton-cook_mitchell.html, people/staton_margaret.html,
+  people/steinbach_peter.html, people/stevens_sarah.html, people/stillwell_mark.html,
+  people/stimberg_marcel.html, people/strootman_jonathan.html, people/sumner_mike.html,
+  people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html,
+  people/taber-thomas_bradley.html, people/tarkowski_leszek.html, people/tarvin_becca.html,
+  people/tatman_rachael.html, people/taylor_cody.html, people/teal_t.html, people/telenczuk_bartosz.html,
+  people/telenczuk_maria.html, people/terman_rochelle.html, people/teucher_andrew.html,
+  people/thoele_florian.html, people/thomas_adam.html, people/thomson_samuel.html,
+  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
+  people/tomsett_richard.html, people/tran_lina.html, people/trimble_will.html, people/turek_daniel.html,
+  people/turner_s.html, people/tweedie_fiona.html, people/ugalde_juan.html, people/ushizima_daniela.html,
+  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
+  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
+  people/van-rossum_thea.html, people/van-schyndel_jay.html, people/van-tuyl_steve.html,
+  people/vandervalk_steven.html, people/vanichkina_darya.html, people/varga_vicky.html,
+  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
+  people/vilbig_kevin.html, people/von-bieberstein_philipp.html, people/vonderlinden_jens.html,
+  people/wake_leanne.html, people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
+  people/warren_dan.html, people/wasser_leah.html, people/waterfall_josh.html, people/waugh_b.html,
+  people/weaver_belinda.html, people/weber_lukas.html, people/weinstein_ben.html,
+  people/wheeler_daniel.html, people/white_e.html, people/white_easton.html, people/whitefield_shawn.html,
+  people/whitehead_tyson.html, people/whitlock_alexander.html, people/wijeratne_asela.html,
+  people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
+  people/williams_l.html, people/williams_ryan.html, people/williford_anna.html, people/willmore_frank.html,
   people/wilson_g.html, people/wilson_p.html, people/winston_donald.html, people/winton_jared.html,
   people/woo_kara.html, people/woods_c.html, people/wright_thomas.html, people/yang_fan.html,
   people/yang_hsi-kai.html, people/young_lynn.html, people/zakkaroff_constantine.html,
